# mushroom-rl

./: .coverage  .coverage.penrose.19155.012036  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  MUJOCO_LOG.TXT  Makefile  README.rst  TODO.txt  maxQ1.npy  mkdocs.yml  pyproject.toml  rQ1.npy  requirements.txt  rtd_requirements.txt  setup.py
PyPi/: __init__.py  agent.py
config/: car_on_hill.json  car_on_hill_extra.json  car_on_hill_nn.json  dqn_atari.json  fqi_extra.json  fqi_nn.json  pendulum.json  qlearning_tabular.json
docs/: Features.rst  Makefile  Tutorials.rst  conf.py  gitignore.txt  index.md  index.rst  requirements.txt  tutorial.md
examples/: MUJOCO_LOG.TXT  acrobot_a2c.py  acrobot_dqn.py  acrobot_dqn_pytorch.py  atari_dqn.py  bipedal_trust_region.py  bypedal_trust_region.py  car_on_hill.py  car_on_hill_fqi.py  cartpole_lspi.py  get_env_info.py  gibson_dqn.py  grid_world-td.py  grid_world.py  grid_world_td.py  gym_recurrent_ppo.py  habitat_dqn.py  hms_door_ddpg.py  hms_door_sac.py  humanoid_sac.py  igibson_dqn.py  inverted_pendulum_lspi.py  isaac_example.py  lqr_bbo.py  lqr_pg.py  minigrid_dqn.py  mountain_car.py  mountain_car_sarsa.py  mujoco_air_hockey_sac.py  multiprocess_pendulum.py  norm_plots_callbacks.py  pendulum_a2c.py  pendulum_ac.py  pendulum_ddpg.py  pendulum_dpg.py  pendulum_lspi.py  pendulum_sac.py  pendulum_trust_region.py  plotting_and_normalization.py  puddle_world_sarsa.py  (+17 more)
logs/: README  events.out.tfevents.1502445021.Ufficio-Dave  events.out.tfevents.1502445119.Ufficio-Dave  (+3 more)
tests/: test.py  (+1 more)
(+962 files in other folders)
